--- a/EyeSpeak.xcodeproj/xcshareddata/xcschemes/AdHoc.xcscheme
+++ b/EyeSpeak.xcodeproj/xcshareddata/xcschemes/AdHoc.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "1030"
+   LastUpgradeVersion = "1130"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -15,8 +15,8 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "130C00B320D2AD2A007C3163"
-               BuildableName = "EyeTrackingTest.app"
-               BlueprintName = "EyeTrackingTest"
+               BuildableName = "EyeSpeak.app"
+               BlueprintName = "EyeSpeak"
                ReferencedContainer = "container:EyeSpeak.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -29,20 +29,9 @@
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
       </Testables>
-      <MacroExpansion>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "130C00B320D2AD2A007C3163"
-            BuildableName = "EyeTrackingTest.app"
-            BlueprintName = "EyeTrackingTest"
-            ReferencedContainer = "container:EyeSpeak.xcodeproj">
-         </BuildableReference>
-      </MacroExpansion>
-      <AdditionalOptions>
-      </AdditionalOptions>
    </TestAction>
    <LaunchAction
-      buildConfiguration = "Debug"
+      buildConfiguration = "Release"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       launchStyle = "0"
@@ -56,13 +45,11 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "130C00B320D2AD2A007C3163"
-            BuildableName = "EyeTrackingTest.app"
-            BlueprintName = "EyeTrackingTest"
+            BuildableName = "EyeSpeak.app"
+            BlueprintName = "EyeSpeak"
             ReferencedContainer = "container:EyeSpeak.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
-      <AdditionalOptions>
-      </AdditionalOptions>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -75,8 +62,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "130C00B320D2AD2A007C3163"
-            BuildableName = "EyeTrackingTest.app"
-            BlueprintName = "EyeTrackingTest"
+            BuildableName = "EyeSpeak.app"
+            BlueprintName = "EyeSpeak"
             ReferencedContainer = "container:EyeSpeak.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
