- Adds a dummy unit test so that we can include testing as a step in fastlane and circle ci

--- a/EyeSpeak.xcodeproj/xcshareddata/xcschemes/AdHoc.xcscheme
+++ b/EyeSpeak.xcodeproj/xcshareddata/xcschemes/AdHoc.xcscheme
@@ -28,6 +28,16 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "54D3C41323E37CD40061EF47"
+               BuildableName = "EyeSpeakTests.xctest"
+               BlueprintName = "EyeSpeakTests"
+               ReferencedContainer = "container:EyeSpeak.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
