--- a/EyeSpeak.xcodeproj/xcshareddata/xcschemes/Development.xcscheme
+++ b/EyeSpeak.xcodeproj/xcshareddata/xcschemes/Development.xcscheme
@@ -37,6 +37,16 @@
          </BuildableReference>
       </MacroExpansion>
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "54D3C41323E37CD40061EF47"
+               BuildableName = "EyeSpeakTests.xctest"
+               BlueprintName = "EyeSpeakTests"
+               ReferencedContainer = "container:EyeSpeak.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
