--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,6 +32,21 @@ jobs:
       - store_artifacts:
           path: output
 
+  testflight:
+    macos:
+      xcode: 11.3.0
+    environment:
+      FL_OUTPUT_DIR: output
+      FASTLANE_LANE: appstore
+    steps:
+      - checkout
+      - run: bundle install
+      - run:
+          name: Fastlane
+          command: bundle exec fastlane $FASTLANE_LANE
+      - store_artifacts:
+          path: output
+          
 workflows:
   build-test-adhoc:
     jobs:
@@ -42,3 +57,9 @@ workflows:
               only: develop
           requires:
             - build-and-test
+      - testflight:
+          filters:
+            branches:
+              only: develop
+          requires:
+            - build-and-test            
