- runs swiftlint autocorrect - changing swiftlint rules - manual fixes to swiftlint warnings/errors

--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -1,5 +1,6 @@
 disabled_rules:
 - trailing_whitespace
+- identifier_name
 opt_in_rules:
 - empty_count
 - empty_string
@@ -7,9 +8,9 @@ excluded:
 - Carthage
 - Pods
 - SwiftLint/Common/3rdPartyLib
+force_cast: warning
 line_length:
     warning: 150
-    error: 200
     ignores_function_declarations: true
     ignores_comments: true
     ignores_urls: true
