--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -3,6 +3,7 @@ disabled_rules:
 - identifier_name
 - compiler_protocol_init
 - unused_optional_binding
+- force_cast
 opt_in_rules:
 - empty_count
 - empty_string
