- Updates info.plist camera privacy prompt

--- a/EyeSpeak/Supporting Files/Info.plist
+++ b/EyeSpeak/Supporting Files/Info.plist
@@ -23,7 +23,7 @@
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSCameraUsageDescription</key>
-	<string>This application will use the camera for Augmented Reality.</string>
+	<string>The Vocable app uses Apple&apos;s ARKit head tracking to detect the user&apos;s face as seen in the device&apos;s front camera feed for the purpose of controlling an on-screen pointer, allowing users with limited mobility to interact with the app. Head orientation and position data is used expressly for controlling the on-screen pointer. That head tracking data is not stored or transmitted in any way. The Vocable app needs permision to use the camera for this purpose.</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
