--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -4,6 +4,7 @@ disabled_rules:
 - compiler_protocol_init
 - unused_optional_binding
 - force_cast
+- force_try
 opt_in_rules:
 - empty_count
 - empty_string
