--- a/EyeSpeak/Supporting Files/Info.plist
+++ b/EyeSpeak/Supporting Files/Info.plist
@@ -38,6 +38,8 @@
 		<string>armv7</string>
 		<string>arkit</string>
 	</array>
+	<key>UIRequiresFullScreen</key>
+	<true/>
 	<key>UIStatusBarHidden</key>
 	<true/>
 	<key>UISupportedInterfaceOrientations</key>
