--- a/Vocable.xcodeproj/xcshareddata/xcschemes/AdHoc.xcscheme
+++ b/Vocable.xcodeproj/xcshareddata/xcschemes/AdHoc.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "130C00B320D2AD2A007C3163"
-               BuildableName = "EyeSpeak.app"
-               BlueprintName = "EyeSpeak"
-               ReferencedContainer = "container:EyeSpeak.xcodeproj">
+               BuildableName = "Vocable.app"
+               BlueprintName = "Vocable"
+               ReferencedContainer = "container:Vocable.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "54D3C41323E37CD40061EF47"
-               BuildableName = "EyeSpeakTests.xctest"
-               BlueprintName = "EyeSpeakTests"
-               ReferencedContainer = "container:EyeSpeak.xcodeproj">
+               BuildableName = "VocableTests.xctest"
+               BlueprintName = "VocableTests"
+               ReferencedContainer = "container:Vocable.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "130C00B320D2AD2A007C3163"
-            BuildableName = "EyeSpeak.app"
-            BlueprintName = "EyeSpeak"
-            ReferencedContainer = "container:EyeSpeak.xcodeproj">
+            BuildableName = "Vocable.app"
+            BlueprintName = "Vocable"
+            ReferencedContainer = "container:Vocable.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "130C00B320D2AD2A007C3163"
-            BuildableName = "EyeSpeak.app"
-            BlueprintName = "EyeSpeak"
-            ReferencedContainer = "container:EyeSpeak.xcodeproj">
+            BuildableName = "Vocable.app"
+            BlueprintName = "Vocable"
+            ReferencedContainer = "container:Vocable.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
