--- a/Vocable.xcodeproj/xcshareddata/xcschemes/AppStore.xcscheme
+++ b/Vocable.xcodeproj/xcshareddata/xcschemes/AppStore.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "130C00B320D2AD2A007C3163"
-               BuildableName = "EyeSpeak.app"
-               BlueprintName = "EyeSpeak"
-               ReferencedContainer = "container:EyeSpeak.xcodeproj">
+               BuildableName = "Vocable.app"
+               BlueprintName = "Vocable"
+               ReferencedContainer = "container:Vocable.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -45,9 +45,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "130C00B320D2AD2A007C3163"
-            BuildableName = "EyeSpeak.app"
-            BlueprintName = "EyeSpeak"
-            ReferencedContainer = "container:EyeSpeak.xcodeproj">
+            BuildableName = "Vocable.app"
+            BlueprintName = "Vocable"
+            ReferencedContainer = "container:Vocable.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -62,9 +62,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "130C00B320D2AD2A007C3163"
-            BuildableName = "EyeSpeak.app"
-            BlueprintName = "EyeSpeak"
-            ReferencedContainer = "container:EyeSpeak.xcodeproj">
+            BuildableName = "Vocable.app"
+            BlueprintName = "Vocable"
+            ReferencedContainer = "container:Vocable.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
