--- a/Vocable.xcodeproj/xcshareddata/xcschemes/AppStore.xcscheme
+++ b/Vocable.xcodeproj/xcshareddata/xcschemes/AppStore.xcscheme
@@ -28,6 +28,16 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "17191A2E245089270079F9BE"
+               BuildableName = "VocableUITests.xctest"
+               BlueprintName = "VocableUITests"
+               ReferencedContainer = "container:Vocable.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
