Refactoring EditPhrases to take a Category

--- a/Vocable.xcodeproj/xcshareddata/xcschemes/Development.xcscheme
+++ b/Vocable.xcodeproj/xcshareddata/xcschemes/Development.xcscheme
@@ -86,7 +86,7 @@
             isEnabled = "NO">
          </EnvironmentVariable>
          <EnvironmentVariable
-            key = "AddPhraseEnabled"
+            key = "EditPhrasesEnabled"
             value = ""
             isEnabled = "YES">
          </EnvironmentVariable>
