--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,3 +1,3 @@
 files:
   - source: Vocable/Supporting Files/en.lproj/Presets.strings
-    translation: Vocable/Supporting Files/%osx_locale%.lproj/%original_file_name%
+    translation: /Vocable/Supporting Files/%osx_locale%.lproj/%original_file_name%
