--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,3 +1,3 @@
 files:
-  - source: /Vocable/LocalizedExport/en.xloc/LocalizedContents/en.xliff
+  - source: /CrowdinExport/en.xliff
     translation: /CrowdinImports/%osx_locale%.xliff
