--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -56,15 +56,15 @@ jobs:
       - run:
           name: Fastlane
           command: bundle exec fastlane xliffimport
-      - run:
-          name: Fastlane
-          command: bundle exec fastlane test
+     # - run:
+      #    name: Fastlane
+       #   command: bundle exec fastlane test
       - deploy:
           name: Push back to branch
           command: |
             git config credential.helper 'cache --timeout=120'
-            git config user.email "actions@github.com" # Not sure what anonymous email to give this?
-            git config user.name "XLIFF Bot"
+            git config user.email "${LOCALIZATION_EMAIL}"
+            git config user.name "${LOCALIZATION_USERNAME}"
             git commit --allow-empty -m "Updated localizations [ci skip]"
             git push -q https://${LOCALIZATION_DEPLOYMENT_KEY}@github.com/willowtreeapps/vocable-ios.git ${CIRCLE_BRANCH}
     
