--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -51,9 +51,7 @@ jobs:
     macos: 
       xcode: 11.4.0
     steps:
-      - add_ssh_keys:
-            fingerprints:
-              - "${LOCALIZATION_DEPLOYMENT_KEY}"
+      - add_ssh_keys
       - checkout
       - run: bundle install
       - run:
