--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -64,10 +64,10 @@ jobs:
           name: Push back to branch
           command: |
             git config credential.helper 'cache --timeout=120'
-            git config user.email "actions@github.com"
+            git config user.email "localization_bot@willowtreeapps.com"
             git config user.name "Localization Bot"
             git commit --allow-empty -m "Updated localizations [ci skip]"
-            git push -q https://${LOCALIZATION_DEPLOYMENT_KEY}@github.com/willowtreeapps/vocable-ios.git ${CIRCLE_BRANCH}
+            git push -q git@github.com:willowtreeapps/vocable-ios.git ${CIRCLE_BRANCH}
     
 workflows:
   build-test-adhoc-testflight:
