Add Caroline to codeowners file

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,1 +1,1 @@
-*       @jrtb @Clstroud @pg8wood @jsmorgan42 @thomasshealy @stevefosterwta
+*       @jrtb @Clstroud @pg8wood @jsmorgan42 @thomasshealy @stevefosterwta @carolinelaw
