Added new base test class for CustomCategoriesTests; CustomCategoriesBaseTest

--- a/Vocable.xcodeproj/xcshareddata/xcschemes/AdHoc.xcscheme
+++ b/Vocable.xcodeproj/xcshareddata/xcschemes/AdHoc.xcscheme
@@ -67,6 +67,9 @@
             </BuildableReference>
             <SkippedTests>
                <Test
+                  Identifier = "CustomCategoriesTest/testPagination()">
+               </Test>
+               <Test
                   Identifier = "MainScreenTests/testCustonCategoryPagination()">
                </Test>
                <Test
