--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -29,7 +29,7 @@ function_parameter_count:
     warning: 6
     error: 8
 type_body_length:
-    warning: 300
+    warning: 500
     error: 500
 file_length:
     warning: 1000
@@ -38,4 +38,6 @@ file_length:
 cyclomatic_complexity:
     warning: 15
     error: 25
+nesting:
+    type_level: 5
 reporter: "xcode"
