--- a/Vocable.xcodeproj/xcshareddata/xcschemes/Development.xcscheme
+++ b/Vocable.xcodeproj/xcshareddata/xcschemes/Development.xcscheme
@@ -61,6 +61,9 @@
                   Identifier = "CustomCategoriesTest">
                </Test>
                <Test
+                  Identifier = "CustomCategoriesTests/testPagination()">
+               </Test>
+               <Test
                   Identifier = "MainScreenTests/testCustonCategoryPagination()">
                </Test>
                <Test
