--- a/Vocable.xcodeproj/xcshareddata/xcschemes/Development.xcscheme
+++ b/Vocable.xcodeproj/xcshareddata/xcschemes/Development.xcscheme
@@ -78,6 +78,9 @@
                <Test
                   Identifier = "SettingsScreenTests/testAddCustomCategory()">
                </Test>
+               <Test
+                  Identifier = "SettingsScreenTests/testReorder()">
+               </Test>
             </SkippedTests>
          </TestableReference>
       </Testables>
