Permit TestFlight builds to be produced from release branches

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -115,7 +115,9 @@ workflows:
       - buildanddeploytotestflight:
           filters:
             branches:
-              only: develop
+              only: 
+                - develop
+                - release/*
           requires:
             - export-localizations-for-crowdin
             - build-and-test
