[602] Remove ability to modify feature flag externally

--- a/Vocable.xcodeproj/xcshareddata/xcschemes/Development.xcscheme
+++ b/Vocable.xcodeproj/xcshareddata/xcschemes/Development.xcscheme
@@ -101,6 +101,10 @@
             argument = "resetAppDataOnLaunch"
             isEnabled = "NO">
          </CommandLineArgument>
+         <CommandLineArgument
+            argument = "enableListeningMode"
+            isEnabled = "NO">
+         </CommandLineArgument>
       </CommandLineArguments>
    </LaunchAction>
    <ProfileAction
