Disabled CategoryPhrasesPaginationTests::testCanNavigatePages

--- a/Vocable.xcodeproj/xcshareddata/xcschemes/Development.xcscheme
+++ b/Vocable.xcodeproj/xcshareddata/xcschemes/Development.xcscheme
@@ -58,6 +58,9 @@
             </BuildableReference>
             <SkippedTests>
                <Test
+                  Identifier = "CategoryPhrasesPaginationTests/testCanNavigatePages()">
+               </Test>
+               <Test
                   Identifier = "CustomCategoriesTest">
                </Test>
                <Test
